src/snapshots/alma__infer__tests__test_infer_module__import_alias.snap
---
source: src/infer.rs
assertion_line: 2134
expression: "infer(\"\\\nmodule User exposing (new)\n\nimport User.Id as UserId\n\nnew = { id = UserId.new }\n\nmodule User.Id exposing (new)\n    new = 42\n\")"

---
Input:

module User exposing (new)

import User.Id as UserId

new = { id = UserId.new }

module User.Id exposing (new)
    new = 42


---
Output:

module User

new : ∀ ∅ . { id : Float }


module User.Id

new : ∀ ∅ . Float
