src/snapshots/alma__infer__tests__test_infer_module__import_fully_qualified_name-2.snap
---
source: src/infer.rs
assertion_line: 2633
expression: "infer(\"\\\nmodule Test exposing (new)\n\nimport Test.Id\n\nnew = Test.Id\n\nmodule Test.Id exposing (new)\n    new = 42\n\")"
---
Input:

module Test exposing (new)

import Test.Id

new = Test.Id

module Test.Id exposing (new)
    new = 42


---
Output:

Test.alma [5:6]

Undefined identifier `Test.Id`

  3│  import Test.Id
  4│  
  5│  new = Test.Id
   │        ↑↑↑↑↑↑↑
  6│  
  7│  module Test.Id exposing (new)
