src/snapshots/alma__infer__tests__test_infer_module__import_fully_qualified_name.snap
---
source: src/infer.rs
assertion_line: 2621
expression: "infer(\"\\\nmodule Test exposing (new)\n\nimport Test.Id\n\nnew = { id = Test.Id.new }\n\nmodule Test.Id exposing (new)\n    new = 42\n\")"
---
Input:

module Test exposing (new)

import Test.Id

new = { id = Test.Id.new }

module Test.Id exposing (new)
    new = 42


---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

new : ∀ ∅ . { id : Float }


module Test.Id

new : ∀ ∅ . Float
