src/snapshots/alma__infer__tests__test_infer_module__import_nested_fully_qualified_name.snap
---
source: src/infer.rs
assertion_line: 2677
expression: "infer(\"\\\nmodule Test exposing (new)\n\nimport Test.Attributes\nimport Test.Attributes.Id\n\nnew = { id = Test.Attributes.Id.new }\n\nmodule Test.Attributes\n    module Test.Attributes.Id exposing (new)\n        new = 42\n\")"
---
Input:

module Test exposing (new)

import Test.Attributes
import Test.Attributes.Id

new = { id = Test.Attributes.Id.new }

module Test.Attributes
    module Test.Attributes.Id exposing (new)
        new = 42


---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

new : ∀ ∅ . { id : Float }


module Test.Attributes.Id

new : ∀ ∅ . Float


module Test.Attributes


