src/snapshots/alma__infer__tests__test_infer_module__import_nonexistent_module.snap
---
source: src/infer.rs
assertion_line: 2585
expression: "infer(r#\"\nmodule Test\n\nimport Nope exposing (test)\n\ntest = 1\n\"#)"
---
Input:


module Test

import Nope exposing (test)

test = 1


---
Output:

Test.alma [4:0]

Couldn't find module `Nope`

  2│  module Test
  3│  
  4│  import Nope exposing (test)
   │  ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
  5│  
  6│  test = 1
