src/snapshots/alma__infer__tests__test_infer_module__importing_from_submodule-2.snap
---
source: src/infer.rs
assertion_line: 2542
expression: "infer(r#\"\nmodule Test\n\nimport Test.TestInner exposing (test)\n\nadd = \\x -> x + test\n\nmodule Test.TestInner exposing (test)\n\n    test = \"hi\"\n\"#)"
---
Input:


module Test

import Test.TestInner exposing (test)

add = \x -> x + test

module Test.TestInner exposing (test)

    test = "hi"


---
Output:

Test.alma [6:16]

Type mismatch:  String  ≠  Float

Expected

  4│  import Test.TestInner exposing (test)
  5│  
  6│  add = \x -> x + test
   │                  ↑↑↑↑
  7│  
  8│  module Test.TestInner exposing (test)

to be

Float

but seems to be

String
