src/snapshots/alma__infer__tests__test_infer_module__importing_from_submodule-4.snap
---
source: src/infer.rs
assertion_line: 2568
expression: "infer(r#\"\nmodule Test\n\nimport Test.TestInner exposing (test)\n\nadd = \\x -> x + test x\n\nmodule Test.TestInner exposing (test)\n\n    test = \\x -> x + \"hi\"\n\"#)"
---
Input:


module Test

import Test.TestInner exposing (test)

add = \x -> x + test x

module Test.TestInner exposing (test)

    test = \x -> x + "hi"


---
Output:

Test.alma [10:21]

Type mismatch:  String  ≠  Float

Expected

   8│  module Test.TestInner exposing (test)
   9│  
  10│      test = \x -> x + "hi"
    │                       ↑↑↑↑

to be

Float

but seems to be

String
